--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
 </nav>
 <div>
-
+   <button> <img width="16" height="16" src="https://darksky.net/images/current-location.png" alt="Current Location"> </button>
     <input type="text" placeholder="Search for your city">
 
 </div>
