--- a/index.html
+++ b/index.html
@@ -16,17 +16,42 @@
         <li><a href="about.asp">Maps</a></li>
         <li><a href="about.asp">dark Sky by API</a></li>
         <li><a href="about.asp"> help</a></li>
-
+        
     </ul>
+    
 </nav>
-<div>
-   <button> <img width="16" height="16" src="https://darksky.net/images/current-location.png" alt="Current Location"> </button>
+</div>
+<div class="search-bar">
+   <button>  <img  width="16" height="16" src="https://darksky.net/images/current-location.png" alt="Current Location"> </button>
     <input type="text" placeholder="Search for your city">
-
+   <button> <img  width="16" height="16" src=	"https://darksky.net/images/search.png"
+     alt="Search Button"> </button>
 </div>
 
     </div>
+<div> 
+<ul class="live">
+    <li>Wind= 8mph</li>
+    <li> Humidity: 40%</li>
+    <li> Dew pt: 48</li>
+    <li>UV Index- 6</li>
+    <li> Visibility 10 miles</li>
+    <li>pressure: 1020 mb</li>
+
+</ul>
+
+</div>
     <iframe id="embedded-map" src="https://maps.darksky.net/@temperature,40.7127,-74.0059,6?marker=40.7127,-74.0059&amp;linkto=maps"></iframe>     
+
+<div>
+    <p class="end"> Explore the weather in the past or future:</p>    
+</div>
+<div class="bottom-button">
+
+</div>
+<footer>
+    <p> Dark Sky</p>
+</footer>
 
 </body>
 </html>
